kubernetes/k3s-01/workloads/vaultwarden/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.47fc5c.com`)
      kind: Rule
      middlewares:
        - namespace: vaultwarden
          name: vaultwarden-ipallowlist
      services:
        - name: vaultwarden
          kind: Service
          port: 80
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: vaultwarden-certificate
